# ds-best-practice-example

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cli.py  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/api/: index.html
0.1.1/changelog/: index.html
0.1.1/contributing/: index.html
0.1.1/installation/: index.html
0.1.1/search/: search_index.json
0.1.1/usage/: index.html
docs/: api.md  installation.md  usage.md
ezml/: __init__.py  data.py  diagnostic.py  main.py  model.py  pipeline.py
input/conf/: __init__.py  config.yaml
latest/installation/: index.html
latest/usage/: index.html
notebook/: dev-tests.ipynb  ds-best-practice-example.ipynb
notebook/outputs/2023-08-10/10-44-02/.hydra/: config.yaml  hydra.yaml
tests/: __init__.py  test_best_practice_example.py  test_data.py  test_main.py
